--- a/stick-v3/platformio.ini
+++ b/stick-v3/platformio.ini
@@ -13,6 +13,11 @@ platform = teensy
 board = teensy36
 framework = arduino
 
+; [env:teensy31]
+; platform = teensy
+; board = teensy31
+; framework = arduino
+
 lib_deps =
     FastLED
     IRremote
